# T-IA

./: .gitignore  GEMINI.md  debug_extraction.py
extracao-de-dados/: README.md  requirements.txt
extracao-de-dados/extracao-diarios/: .env  main_pipeline.py
extracao-de-dados/extracao-diarios/pipeline/: deepseek_parallel.py  docling.py
extracao-de-dados/extracao-diarios/src/mfe/: constants.py
extracao-de-dados/extracao-diarios/src/mfe/artifacts/: token_count.py
extracao-de-dados/extracao-diarios/src/mfe/config/: logging.py
extracao-de-dados/extracao-diarios/src/mfe/converters/: convert_byte_files.ipynb
extracao-de-dados/extracao-diarios/src/mfe/extractors/: deepseek_ocr.py  ocr.py
extracao-de-dados/extracao-diarios/src/mfe/ingest/: class_metadata.py  unzip.py
extracao-de-dados/extracao-docentes/: main_pipeline.py
extracao-de-dados/extracao-docentes/pipeline/: deepseek.py  docling_parallel.py  postprocess.py  utils.py
extracao-de-dados/extracao-docentes/src/mfe/cloud/: s3.py
extracao-de-dados/extracao-docentes/src/mfe/config/: settings.py
modules/coleta_dados/docentes/: analisar_docentes.py
modules/coleta_dados/exercicios/: desafio_diario.ipynb  exercicio_01_requests.ipynb  exercicio_02_docentes.ipynb  exercicio_02_docentes_backup.ipynb
modules/coleta_dados/webscraping_diario/: README.md  gerar_relatorio.py  pyproject.toml  selenium_scraper.py
modules/preparacao_dados/: data_pipeline.py  deduplicar_raw.py  deduplication.py  deduplicator.py  explore.py  pipeline.py  pipeline_demo.py  pipeline_robust.py  test.py
(+14 files in other folders)
