[project]
name = "Atividade-04-Coleta-de-dados"
version = "0.1.0"
description = "Webscraping de Diários Oficiais dos Municípios do Piauí — Tabuleiros do Alto Parnaíba"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.1",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py312"
